--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.3.2"
+    "@vitejs/plugin-react": "^4.3.1",
+    "prettier": "^3.3.2",
+    "vite": "^5.3.2"
   }
 }
