--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "koyomi",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -14,7 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "typescript": "^5.5.2",
     "web-vitals": "^4.0.0"
   },
